# hft-research-strategy

./: .gitignore  CMakeLists.txt  CODE_REVIEW.md  FIXES_APPLIED.md  VERSION_GAP_HANDLING.md  WEBSOCKET_KEEPALIVE_FIX.md
include/mexc/: client_base.hpp  http_client.hpp  spot_client.hpp  util.hpp  ws_client.hpp  ws_spot_client.hpp
include/strategy/: latency_tracker.hpp  market_maker.hpp  orderbook.hpp  orderbook_display.hpp  orderbook_manager.hpp  trade_ledger.hpp
src/: main.cpp  orderbook_viewer.cpp  orderbook_viewer_gui.cpp
src/mexc/: client_base.cpp  http_client.cpp  spot_client.cpp  util.cpp  ws_client.cpp  ws_spot_client.cpp
src/strategy/: latency_tracker.cpp  market_maker.cpp  orderbook.cpp  orderbook_display.cpp  orderbook_manager.cpp  trade_ledger.cpp
tests/: test_integration.cpp  test_util.cpp
